--- a/MyOutfitInventoryMVP/index.html
+++ b/MyOutfitInventoryMVP/index.html
@@ -18,7 +18,7 @@
       <div ui-view></div>
     </section>
 
-    
+
 
     <footer-directive></footer-directive>
 
@@ -34,15 +34,24 @@
 
 <!-- Local -->
     <script src="components/outfitInventory.js"></script>
+    <!-- Directives -->
     <script src="directives/headerDirective.js"></script>
     <script src="directives/footerDirective.js"></script>
-    <script src="directives/sliderDirective.js"></script>
+    <script src="directives/shirtSliderDirective.js"></script>
+    <script src="directives/pantsSliderDirective.js"></script>
+    <script src="directives/shoeSliderDirective.js"></script>
+    <script src="directives/headwearSliderDirective.js"></script>
     <script src="directives/outfitMakerDirective.js"></script>
+    <!-- Controllers -->
     <script src="components/home/homeCtrl.js"></script>
     <script src="components/signup/signupCtrl.js"></script>
     <script src="components/login/loginCtrl.js"></script>
     <script src="components/outfitMaker/outfitMakerCtrl.js"></script>
-    <script src="components/demo/demoCtrl.js"></script>
+    <script src="components/demo/shirtSliderCtrl.js"></script>
+    <script src="components/demo/pantsSliderCtrl.js"></script>
+    <script src="components/demo/shoeSliderCtrl.js"></script>
+    <script src="components/demo/headwearSliderCtrl.js"></script>
+    <!-- Services -->
     <script src="components/outfitMaker/outfitMakerService.js"></script>
     <script src="components/home/homeService.js"></script>
 
